--- a/camera.html
+++ b/camera.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="assets/css/camera.css">
     <title>ID Capture</title>
 </head>
 <body>
@@ -47,6 +48,6 @@
     <p>&copy; 2024 Your Company. All rights reserved.</p>
 </footer>
 
-<script src="script.js"></script> <!-- Link to your JavaScript file -->
+<script src="assets/fs/camera.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
