--- a/camera.html
+++ b/camera.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ID Scanner</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/camera.css">
 </head>
 <body>
     <!-- Step 1: Capture ID -->
@@ -43,6 +43,6 @@
         <p>&copy; 2024 ID Scanner App</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="assets/js/camera.js"></script>
 </body>
 </html>
