--- a/camera.html
+++ b/camera.html
@@ -3,67 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Code Scanner</title>
-    
+    <title>Joke API Example</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Html5 QR Code Scanner JS -->
-    <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
-
-    <style>
-        #qr-reader__dashboard_section_swaplink { 
-            display: none; 
-        }
-        #result {
-            padding-top: 20px;
-            color: green;
-        }
-    </style>
 </head>
 <body>
-
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-8 text-center">
-            <h1>QR Code Scanner</h1>
-            <div id="qr-reader" style="width: 100%;"></div>
-            <div id="result"></div>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <div class="card text-center">
+                    <div class="card-header">
+                        Random Joke Generator
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title" id="joke-setup">Click the button to get a joke!</h5>
+                        <p class="card-text" id="joke-punchline"></p>
+                        <button class="btn btn-primary" id="joke-btn">Get Joke</button>
+                    </div>
+                    <div class="card-footer text-muted">
+                        Enjoy your joke!
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-
-<script>
-    function onScanSuccess(decodedText, decodedResult) {
-        // Handle the result here
-        document.getElementById('result').innerText = `QR Code: ${decodedText}`;
-        console.log(`Scan result: ${decodedText}`, decodedResult);
-    }
-
-    function onScanError(errorMessage) {
-        // Handle the error during scanning
-        console.error(errorMessage);
-    }
-
-    // Set up the QR code scanner
-    let html5QrCode = new Html5Qrcode("qr-reader");
-
-    html5QrCode.start(
-        { facingMode: "environment" },  // Use rear camera
-        {
-            fps: 10,    // Scans per second
-            qrbox: { width: 250, height: 250 }  // Display box
-        },
-        onScanSuccess,
-        onScanError
-    ).catch(err => {
-        console.error("Error in starting QR code scanner", err);
-    });
-</script>
-
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- JavaScript to fetch the Joke API -->
+    <script>
+        document.getElementById('joke-btn').addEventListener('click', function() {
+            fetch('https://official-joke-api.appspot.com/random_joke')
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById('joke-setup').innerText = data.setup;
+                    document.getElementById('joke-punchline').innerText = data.punchline;
+                })
+                .catch(error => {
+                    console.log('Error fetching the joke:', error);
+                });
+        });
+    </script>
 </body>
 </html>
