--- a/qr.html
+++ b/qr.html
@@ -1,48 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joke API Example</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Weather App</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-6 offset-md-3">
-                <div class="card text-center">
-                    <div class="card-header">
-                        Random Joke Generator
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title" id="joke-setup">Click the button to get a joke!</h5>
-                        <p class="card-text" id="joke-punchline"></p>
-                        <button class="btn btn-primary" id="joke-btn">Get Joke</button>
-                    </div>
-                    <div class="card-footer text-muted">
-                        Enjoy your joke!
-                    </div>
-                </div>
-            </div>
+  <div class="container mt-5">
+    <h1 class="text-center">Simple Weather App</h1>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <form id="weatherForm">
+          <div class="mb-3">
+            <label for="cityInput" class="form-label">Enter City Name</label>
+            <input type="text" class="form-control" id="cityInput" placeholder="e.g., London" required>
+          </div>
+          <button type="submit" class="btn btn-primary w-100">Get Weather</button>
+        </form>
+        <div class="mt-4" id="weatherInfo" style="display: none;">
+          <h4>Weather in <span id="cityName"></span></h4>
+          <p><strong>Temperature:</strong> <span id="temperature"></span>°C</p>
+          <p><strong>Description:</strong> <span id="description"></span></p>
+          <p><strong>Humidity:</strong> <span id="humidity"></span>%</p>
         </div>
+      </div>
     </div>
+  </div>
 
-    <!-- Bootstrap JS and Popper.js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- JavaScript to fetch the Joke API -->
-    <script>
-        document.getElementById('joke-btn').addEventListener('click', function() {
-            fetch('https://official-joke-api.appspot.com/random_joke')
-                .then(response => response.json())
-                .then(data => {
-                    document.getElementById('joke-setup').innerText = data.setup;
-                    document.getElementById('joke-punchline').innerText = data.punchline;
-                })
-                .catch(error => {
-                    console.log('Error fetching the joke:', error);
-                });
+  <!-- Bootstrap JS and dependencies -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- JavaScript for API call -->
+  <script>
+    document.getElementById('weatherForm').addEventListener('submit', function (e) {
+      e.preventDefault();
+      
+      const apiKey = 'your_api_key_here'; // Replace with your OpenWeather API key
+      const city = document.getElementById('cityInput').value;
+      const apiUrl = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`;
+
+      fetch(apiUrl)
+        .then(response => response.json())
+        .then(data => {
+          document.getElementById('cityName').textContent = data.name;
+          document.getElementById('temperature').textContent = data.main.temp;
+          document.getElementById('description').textContent = data.weather[0].description;
+          document.getElementById('humidity').textContent = data.main.humidity;
+
+          document.getElementById('weatherInfo').style.display = 'block';
+        })
+        .catch(error => {
+          alert('City not found, please try again.');
         });
-    </script>
+    });
+  </script>
 </body>
 </html>
