--- a/qr.html
+++ b/qr.html
@@ -3,27 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather App</title>
+  <title>NIDA Verification</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   <div class="container mt-5">
-    <h1 class="text-center">Simple Weather App</h1>
+    <h1 class="text-center">NIDA ID Verification</h1>
     <div class="row justify-content-center">
       <div class="col-md-6">
-        <form id="weatherForm">
+        <form id="nidaForm">
           <div class="mb-3">
-            <label for="cityInput" class="form-label">Enter City Name</label>
-            <input type="text" class="form-control" id="cityInput" placeholder="e.g., London" required>
+            <label for="nidaInput" class="form-label">Enter NIDA Number</label>
+            <input type="text" class="form-control" id="nidaInput" placeholder="e.g., 1234567890" required>
           </div>
-          <button type="submit" class="btn btn-primary w-100">Get Weather</button>
+          <button type="submit" class="btn btn-primary w-100">Verify NIDA</button>
         </form>
-        <div class="mt-4" id="weatherInfo" style="display: none;">
-          <h4>Weather in <span id="cityName"></span></h4>
-          <p><strong>Temperature:</strong> <span id="temperature"></span>°C</p>
-          <p><strong>Description:</strong> <span id="description"></span></p>
-          <p><strong>Humidity:</strong> <span id="humidity"></span>%</p>
+        <div class="mt-4" id="nidaInfo" style="display: none;">
+          <h4>Details for NIDA ID: <span id="nidaNumber"></span></h4>
+          <p><strong>Name:</strong> <span id="fullName"></span></p>
+          <p><strong>Date of Birth:</strong> <span id="dob"></span></p>
+          <p><strong>Gender:</strong> <span id="gender"></span></p>
         </div>
       </div>
     </div>
@@ -34,27 +34,39 @@
 
   <!-- JavaScript for API call -->
   <script>
-    document.getElementById('weatherForm').addEventListener('submit', function (e) {
+    document.getElementById('nidaForm').addEventListener('submit', function (e) {
       e.preventDefault();
-      
-      const apiKey = 'your_api_key_here'; // Replace with your OpenWeather API key
-      const city = document.getElementById('cityInput').value;
-      const apiUrl = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`;
 
-      fetch(apiUrl)
+      const nidaId = document.getElementById('nidaInput').value;
+      fetchNidaData(nidaId);
+    });
+
+    function fetchNidaData(nationalId) {
+      const apiUrl = 'https://nida.api.example.com/verify'; // Example endpoint
+      const apiKey = 'your_nida_api_key'; // Replace with actual API key
+
+      fetch(apiUrl, {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'Authorization': `Bearer ${apiKey}`
+        },
+        body: JSON.stringify({ nationalId: nationalId })
+      })
         .then(response => response.json())
         .then(data => {
-          document.getElementById('cityName').textContent = data.name;
-          document.getElementById('temperature').textContent = data.main.temp;
-          document.getElementById('description').textContent = data.weather[0].description;
-          document.getElementById('humidity').textContent = data.main.humidity;
-
-          document.getElementById('weatherInfo').style.display = 'block';
+          if (data.success) {
+            document.getElementById('nidaNumber').textContent = data.nationalId;
+            document.getElementById('fullName').textContent = data.fullName;
+            document.getElementById('dob').textContent = data.dob;
+            document.getElementById('gender').textContent = data.gender;
+            document.getElementById('nidaInfo').style.display = 'block';
+          } else {
+            alert('Verification failed: ' + data.message);
+          }
         })
-        .catch(error => {
-          alert('City not found, please try again.');
-        });
-    });
+        .catch(error => console.error('Error:', error));
+    }
   </script>
 </body>
 </html>
