--- a/qr.html
+++ b/qr.html
@@ -42,8 +42,8 @@
     });
 
     function fetchNidaData(nationalId) {
-      const apiUrl = 'https://nida.api.example.com/verify'; // Example endpoint
-      const apiKey = 'your_nida_api_key'; // Replace with actual API key
+      const apiUrl = 'https://nida.api.nida.co.tz/verify'; // Example endpoint
+      const apiKey = '1964'; // Replace with actual API key
 
       fetch(apiUrl, {
         method: 'POST',
